@@ -466,6 +466,7 @@ Matthieu Gautier
 Stephen M. Gava
 Xavier de Gaye
 Harry Henry Gebel
+Tamás Bence Gedai
 Marius Gedminas
 Thomas Gellekum
 Gabriel Genellina
